--- a/monolith/package.json
+++ b/monolith/package.json
@@ -9,7 +9,7 @@
     "prebuild": "yarn clean",
     "start": "node ./dist/entrypoint.js",
     "tsc": "tsc -p tsconfig.json --noEmit --watch",
-    "dev": "ts-node-dev --respawn --transpile-only --inspect=9229 src/entrypoint.ts",
+    "dev": "tsx watch src/entrypoint.ts",
     "test": "yarn unit && yarn int && yarn e2e",
     "unit": "jest -c jest.config.unit.js",
     "int": "jest -c jest.config.int.js",
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^3.8.2",
     "typescript": "^4.4.4"
   }
 }
