--- a/monolith/package.json
+++ b/monolith/package.json
@@ -19,7 +19,8 @@
     "fmt": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "fastify": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
